@@ -230,7 +230,7 @@ code {
 	
 	<h1>Requirements</h1>
 	
-	<p>God currently only works on <b>Linux (kernel 2.6.15+), BSD,</b> and <b>Darwin</b> systems. No support for Windows is planned.</p>
+	<p>God currently only works on <b>Linux (kernel 2.6.15+), BSD,</b> and <b>Darwin</b> systems. No support for Windows is planned. Event based conditions on Linux systems require the <code>cn</code> (connector) kernel module loaded or compiled in to the kernel and god must be run as root.</p>
 	
 	<p>The following systems have been tested. Help us test it on others!</p>
 	
